Fixed spacing between list and CTA

--- a/src/components/wishlist/wishlist.scss
+++ b/src/components/wishlist/wishlist.scss
@@ -21,10 +21,7 @@
 
   .wishlist-cta-container {
     position: relative;
+    padding-top: 24px;
     text-align: right;
-
-    .wishlist-cta {
-      margin-top: 32px;
-    }
   }
 }
